fix for ios devices

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="header">
             <div class="header__logo-box">
                 <!-- <video autoplay="true" loop="true" preload="none" id="video-bg" controls="true"> -->
-                <video preload="auto" autoplay="true" loop="loop" muted="muted" volume="0" id="video-bg">
+                <video autoplay loop muted playsinline id="video-bg">
                     <source src="video/glitch.mp4" type="video/mp4">
                     <source src="video/glitch.webm" type="video/webm"> Your browser does not support the video tag.
                 </video>
